Chore: Fix parallax feat on mobile

--- a/main.css
+++ b/main.css
@@ -3,9 +3,22 @@
 border: 1px solid red !important;
 } */
 body{
-  background-color: #660033;
+
   font-size: 25px;
   font-family: "Graduate";
+}
+
+body::before {
+  content: '';
+  position: fixed;
+  display: block;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 120vh;
+  transform: translateY(-10vh);
+  background: url(Images/me.jpeg) no-repeat center / cover;
+  z-index: -1;
 }
 
 html, body{
@@ -31,6 +44,7 @@ i:hover {
   padding-bottom: 5px;
 }
 .about {
+
   margin-left: auto;
   margin-right: auto;
   margin-top: auto;
@@ -68,14 +82,14 @@ i:hover {
 
 .sect {
   height:70%;
-  background-color: #660033;
+
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
 
 .subSection {
-  /* height:60%; */
+
   background-color: white;
 }
 
@@ -91,14 +105,16 @@ i:hover {
   background-attachment: fixed;
 
 }
-
-.col-6 {
+.color {
+  background-color: #660033;
   padding-top: 10px;
   padding-left: 10px;
   color: white;
   overflow: hidden;
   text-align: center;
+
 }
+
 
 .sect__image {
   max-width:100%;
